week-2/docker-project/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    env: dev
