week-2/docker-project/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-app
    #matchExpression:
      #- {key: type, operator: In, values: [dev,test,prod]}
  template:
    metadata:
      labels:
        app : demo-app
    spec:
      containers:
        - name: demo-app
          image: krishnagopika4/trng-1903:2.0.0
