week-2/docker-project/revhire-manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: demo-app
  ports:
    - protocol: 'TCP'
      port: 80
      targetPort: 80
  type: LoadBalancer

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo-app
    #matchExpression:
      #- {key: type, operator: In, values: [dev,test,prod]}

  template:
    metadata:
      labels:
        app : demo-app
    spec:
      containers:
        - name: demo-app
          image: krishnagopika4/trng-1903:2.0.0
