week-2/docker-project/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service-internal
spec:
  selector:
    app: demo-app
  ports:
    - protocol: 'TCP'
      port: 80
      targetPort: 80
  type: ClusterIP
